한복페이지 앵커조정

--- a/hanbok.html
+++ b/hanbok.html
@@ -214,12 +214,14 @@
 
   <div id="newWave_linearBgc"></div>
 
+  <div id="legacyAnchor" style="width: 10px; height: 10px; position: absolute; top: 1210vh;"></div>
+
   <div id="hanbok_legacy">
     <div id="legacyMain">
       <p>LEGACY</p>
     </div>
 
-    <div id="legacyAnchor">
+    <div>
       <div id="legacyMainContainer">
         <!-- <div> -->
           <!-- <div id="legacyLastPage_frameOne"> -->
