pilgrimage naviEvent, tothetop Done

--- a/pilgrimage.html
+++ b/pilgrimage.html
@@ -84,8 +84,8 @@
       <span>NEWS</span>
     </div>
 
-    <div id="newContainer">
-      <div class="container">
+    <div id="newsContainer">
+      <div id="sectionOne" class="container">
         <div>
           <p>Actor of the Year</p>
         </div>
@@ -97,7 +97,7 @@
         </div>
       </div>
 
-      <div class="container">
+      <div id="sectionTwo" class="container">
         <div>
           <div>
             <div>
@@ -147,7 +147,7 @@
     </div>
 
     <div id="pilgrimage_rising">
-      <div class="container">
+      <div id="risingSectionOne" class="container">
         <div>
 
           <img src="/image/pilgrimagePage/risingScreen1.svg" style="width: 20vw; " alt="">
@@ -163,7 +163,7 @@
             alt="">
         </div>
       </div>
-      <div class="container">
+      <div id="risingSectionTwo" class="container">
         <div>
           <div>
             <div class="ul">
@@ -220,6 +220,12 @@
             </div>
           </div>
         </div>
+      </div>
+
+      <div class="totheTop">
+        <a href="#main" style="text-decoration: none; color: #BA3737; z-index: 101;">
+          <span>TOP</span>
+        </a>
       </div>
     </div>
           <script src="./javascript/indexScript.js" type="module"></script>
