--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               </div>
             </div>
           </div>
-          <div>
+          <div id="pilgrimageText">
             <a href="http://127.0.0.1:5500/pilgrimage.html" style="text-decoration : none; color: #BA3737;">
               <p>PILGRIMAGE</p>
             </a>
@@ -58,7 +58,7 @@
               </div>
             </div>
           </div>
-          <div>
+          <div id="hanbokText">
             <a href="http://127.0.0.1:5500/hanbok.html" style="text-decoration : none; color: #fff;">
               <p>HANBOK</p>
             </a>
@@ -70,4 +70,6 @@
   </div>
 </body>
 
+
+<script src="./test/mainpage-lightGlow.js"></script>
 </html>
