legacy 이미지추가

--- a/hanbok.html
+++ b/hanbok.html
@@ -243,12 +243,19 @@
         <!-- <div> -->
           <!-- <div id="legacyLastPage_frameOne"> -->
             <ul class="slide">
-              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main1.svg" alt=""></li>
-              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main2.svg" alt=""></li>
-              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main3.svg" alt=""></li>
-              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main4.svg" alt=""></li>
-              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main5.svg" alt=""></li>
-              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main6.svg" alt=""></li>
+              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main1.svg" style="width: 29vw;"alt=""></li>
+              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main2.svg" style="width: 29vw;"alt=""></li>
+              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main4.svg" style="width: 29vw;"alt=""></li>
+              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main5.svg" style="width: 29vw;"alt=""></li>
+              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main6.svg" style="width: 29vw;"alt=""></li>
+              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main7.svg" style="width: 30vw;" alt=""></li>
+              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main8.svg" style="width: 28vw;" alt=""></li>
+              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main9.svg"style="width: 28vw;" alt=""></li>
+              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main10.svg"style="width: 28vw;" alt=""></li>
+              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main11.svg"style="width: 28vw;" alt=""></li>
+              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main12.svg"style="width: 28vw;" alt=""></li>
+              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main13.svg"style="width: 28vw;" alt=""></li>
+              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main14.svg"style="width: 28vw;" alt=""></li>
             </ul>
           <!-- </div>   -->
         <!-- </div> -->
