--- a/pilgrimage.html
+++ b/pilgrimage.html
@@ -237,7 +237,7 @@
         </a>
       </div>
     </div>
-          <script src="./javascript/indexScript.js" type="module"></script>
+          <script src="./javascript/pilgrimage_indexScript.js" type="module"></script>
 </body>
 
 </html>
