--- a/hanbok.html
+++ b/hanbok.html
@@ -231,7 +231,7 @@
 
   <div id="newWave_linearBgc"></div>
 
-  <div id="legacyAnchor" style="width: 10px; height: 10px; position: absolute; top: 1210vh;"></div>
+  <div id="legacyAnchor" style="width: 10px; height: 10px; position: absolute; top: 1180vh;"></div>
 
   <div id="hanbok_legacy">
     <div id="legacyMain">
@@ -243,19 +243,19 @@
         <!-- <div> -->
           <!-- <div id="legacyLastPage_frameOne"> -->
             <ul class="slide">
-              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main1.svg" style="width: 29vw;"alt=""></li>
-              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main2.svg" style="width: 29vw;"alt=""></li>
-              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main4.svg" style="width: 29vw;"alt=""></li>
-              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main5.svg" style="width: 29vw;"alt=""></li>
-              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main6.svg" style="width: 29vw;"alt=""></li>
-              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main7.svg" style="width: 30vw;" alt=""></li>
-              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main8.svg" style="width: 28vw;" alt=""></li>
-              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main9.svg"style="width: 28vw;" alt=""></li>
-              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main10.svg"style="width: 28vw;" alt=""></li>
-              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main11.svg"style="width: 28vw;" alt=""></li>
-              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main12.svg"style="width: 28vw;" alt=""></li>
-              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main13.svg"style="width: 28vw;" alt=""></li>
-              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main14.svg"style="width: 28vw;" alt=""></li>
+              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main1.svg" style="width: 23vw;"alt=""></li>
+              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main2.svg" style="width: 23vw;"alt=""></li>
+              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main4.svg" style="width: 23vw;"alt=""></li>
+              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main5.svg" style="width: 23vw;"alt=""></li>
+              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main6.svg" style="width: 23vw;"alt=""></li>
+              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main7.svg" style="width: 23vw;" alt=""></li>
+              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main8.svg" style="width: 23vw;" alt=""></li>
+              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main9.svg"style="width: 23vw;" alt=""></li>
+              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main10.svg"style="width: 23vw;" alt=""></li>
+              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main11.svg"style="width: 23vw;" alt=""></li>
+              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main12.svg"style="width: 23vw;" alt=""></li>
+              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main13.svg"style="width: 23vw;" alt=""></li>
+              <li><img id="legacyMainImage" src="./image/hanbok/hanbok_legacy/lega_main14.svg"style="width: 23vw;" alt=""></li>
             </ul>
           <!-- </div>   -->
         <!-- </div> -->
@@ -300,22 +300,22 @@
           <img src="/image/hanbok/hanbok_legacy/hanbok_legacy_slide1.svg" style="width: 22.7vw;" alt="">
         </div>
         <div>
-          <img src="/image/hanbok/hanbok_legacy/hanbok_legacy_slide2.svg" alt="">
+          <img src="/image/hanbok/hanbok_legacy/hanbok_legacy_slide2.svg" style="width: 24.5vw;" alt="">
         </div>
         <div>
-          <img src="/image/hanbok/hanbok_legacy/hanbok_legacy_slide3.svg"  alt="">
+          <img src="/image/hanbok/hanbok_legacy/hanbok_legacy_slide3.svg"  style="width: 30vw;" alt="">
         </div>
         <div>
-          <img src="/image/hanbok/hanbok_legacy/hanbok_legacy_slide4.svg" alt="">
+          <img src="/image/hanbok/hanbok_legacy/hanbok_legacy_slide4.svg" style="width: 22.7vw;" alt="">
         </div>
         <div>
-          <img src="/image/hanbok/hanbok_legacy/hanbok_legacy_slide5.svg" alt="">
+          <img src="/image/hanbok/hanbok_legacy/hanbok_legacy_slide5.svg" style="width: 22.7vw;" alt="">
         </div>
         <div>
           <img src="/image/hanbok/hanbok_legacy/hanbok_legacy_slide6.svg" style="width: 22vw;" alt="">
         </div>
         <div>
-          <img src="/image/hanbok/hanbok_legacy/hanbok_legacy_slide7.svg"  alt="">
+          <img src="/image/hanbok/hanbok_legacy/hanbok_legacy_slide7.svg" style="width: 22.7vw;"  alt="">
         </div>
         <div>
           <img src="/image/hanbok/hanbok_legacy/hanbok_legacy_slide8.svg" style="width: 20vw;" alt="">
@@ -345,7 +345,7 @@
           <img src="/image/hanbok/hanbok_legacy/hanbok_legacy_slide16.svg" style="width: 20vw;" alt="">
         </div>
         <div>
-          <img src="/image/hanbok/hanbok_legacy/hanbok_legacy_slide17.svg" alt="">
+          <img src="/image/hanbok/hanbok_legacy/hanbok_legacy_slide17.svg" style="width: 22.7vw;" alt="">
         </div>
       </div>
     </div>
