--- a/pilgrimage.html
+++ b/pilgrimage.html
@@ -15,7 +15,7 @@
       <span id="titleText">PILGRIMAGE</span>
     </div>
 
-    <nav>
+    <!-- <nav>
       <ul>
         <a href="http://127.0.0.1:5500/index.html"
           style="color: #fff; font-size: 2rem; font-weight: 800; letter-spacing: 5px; text-decoration: none; transform: scale(2, 3.5);">
@@ -34,7 +34,7 @@
           <li>RISING</li>
         </a>
       </ul>
-    </nav>
+    </nav> -->
   </div>
 
   <div id="background">
@@ -234,6 +234,10 @@
       <div class="totheTop">
         <a href="#main" style="text-decoration: none; color: #BA3737; z-index: 101;">
           <span>TOP</span>
+        </a>
+        <a style="text-decoration: none; color: #fff; z-index: 101;" href="http://127.0.0.1:5500/index.html">
+      
+          <span>HOME</span>
         </a>
       </div>
     </div>
