--- a/hanbok.html
+++ b/hanbok.html
@@ -138,7 +138,7 @@
 
   <div id="hanbok_newWave_mainPage">
     <div>
-      <img class="newwaveMainImage" src="/image/hanbok/hanbok_newWave/hanbok_newWave_main.svg" alt="">
+      <img class="newwaveMainImage" src="/image/hanbok/hanbok_newWave/hanbok_newWave_main.svg" style="height: 100vh;"  alt="">
     </div>
 
     <div id="newwaveTextbox">
@@ -224,7 +224,7 @@
     </div>
 
     <div id="colorImage">
-      <img src="" style="width : 40vw;" alt="">
+      <img src=""  alt="">
     </div>
   </div>
 
@@ -261,13 +261,13 @@
         <!-- </div> -->
       </div>
 
-      <div>
-        <div class = "legacyMainText">
+      <div id="containerTwo">
+        <div id="sub" class = "legacyMainText">
           <p>
             '한복이 아름답다는 것을 <br> 모두가 알았으면 좋겠다'
           </p>
         </div>
-        <div class = "legacyMainTextTwo">
+        <div id="article" class = "legacyMainTextTwo">
           <span>이 생각이 컨텐츠 선정의 발단이었습니다. K-pop 무대, OTT 컨텐츠 등을 통해 한복이 주목을 받으면서 역시 내 눈에만 아름다워 보이는 것이 아니구나 라는 생각을 했습니다. 전통적인
             한복은 우아하고 풍성한 멋이 있고, 현대의 변화하는 한복은 실용적이면서 전통적인 멋을 품고 있습니다. 이런 한복이라는 한국 전통 의상이 세계적으로는 물론 국내에서도 사람들이 실생활에서 자주 입는
             옷이 되었으면 좋겠다는 생각에 한복이라는 컨텐츠를 선정하게 되었습니다. 한복은 한국 전통 의상으로서 단순히 입을것의 역할을 넘어 우리 민족의 정체성을 담고 있습니다. 위에서는 한복의 멋에
@@ -297,7 +297,7 @@
     <div id="hanbok_legacy_slide" class= "legacy_container">
       <div>
         <div>
-          <img src="/image/hanbok/hanbok_legacy/hanbok_legacy_slide1.svg" style="width: 22.7vw;" alt="">
+          <img src="/image/hanbok/hanbok_legacy/hanbok_legacy_slide1.svg" style="width: 22.7vw;"  alt="">
         </div>
         <div>
           <img src="/image/hanbok/hanbok_legacy/hanbok_legacy_slide2.svg" style="width: 24.5vw;" alt="">
@@ -377,15 +377,16 @@
       <div>
         <div>
           <div id="yoo" class="lastPage_image legacy_container">
-            <img src="/image/hanbok/hanbok_legacy/yugwansun.svg" style="width: 20vw;" alt="">
+            <img src="/image/hanbok/hanbok_legacy/yugwansun.svg"  alt="">
           </div>
-          <p class="imageName">Yu Gwansun</p>
-
+          
+            <p class="imageName">Yu Gwansun</p>
+          
         </div>
 
         <div>
           <div id="park" class="lastPage_image legacy_container">
-            <img src="/image/hanbok/hanbok_legacy/parkjaehyeok.svg" style="width: 20vw;" alt="">
+            <img src="/image/hanbok/hanbok_legacy/parkjaehyeok.svg"  alt="">
           </div>
           <p class="imageName">Park Jaehyeok</p>
         </div>
@@ -394,7 +395,7 @@
       <div>
         <div id="yeol" class="lastPage_image legacy_container">
           <div></div>
-          <img src="/image/hanbok/hanbok_legacy/parkyeol.svg" style="width : 40vw;" alt="">
+          <img src="/image/hanbok/hanbok_legacy/parkyeol.svg" alt="">
         </div>
 
         <div>
